[package]
name = "adventofcode20"
version = "0.1.0"
authors = ["Wes Jordan <wjordan@mitre.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day1"
path = "src/day1.rs"

[[bin]]
name = "day2"
path = "src/day2.rs"

[dependencies]
regex = "1"